2008-10-22  Guillaume Cottenceau

	* test/test_gdk_gc.rb: add a basic Gdk::GC autotest

2008-10-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkaction.c, src/rbgtkactiongroup.c, src/rbgtkcontainer.c,
	src/rbgtkuimanager.c: fix GC problems.
	Reported by Andrew S. Townley. Thanks!!!

2008-10-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkfilechooser.c: check GTK_FILE_SYSTEM_ERROR availability.
	Reported by Philipp Götzinger. Thanks!!!

2008-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/makeinits.rb: fix a bug that init function is deleted.
	Reported by kimura wataru. Thanks!!!

2008-10-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/makeinits.rb: call Init_gtk_gdk_draw() before
	Init_gtk_gdk_gc(). [#2113491]
	Reported by Ricky Zheng. Thanks!!!

2008-09-30  Kouhei Sutou  <kou@cozmixng.org>

	* gtk/src/rbgtkconversions.h: add.

	* gtk/src/depend: install rbgtkconversions.h.

	* gtk/src/: use conversion macros defined in rbgtkconversions.h.
	Patch by Guillaume Cottenceau. Thanks!!!

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: use check_cairo.

2008-09-07  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_gtk_icon_theme.rb: use "MimeTypes" not "Apps".

2008-08-24  Kouhei Sutou  <kou@cozmixng.org>

	* sample/misc/aboutdialog.rb, sample/misc/aboutdialog2.rb: use
	Gtk::AboutDialog#prgoram_name= not Gtk::AboutDialog#name= because
	Gtk::AboutDialog is deprecated.
	Pointed out by Mathieu Blondel. Thanks!!!

2008-08-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkwindowattr.c (attr_initialize), src/rbgtkwidget.c
	(widget_set_window): add missing type declarations. [#2043970]
	Reported by Neil Roberts. Thanks!!!

	* test/test_gdk_window_attribute.rb, test/test_gtk_widget.rb: add.

2008-08-09  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gtk-demo/printing.rb: add.

2008-07-24  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/rbgtkfilechooser.c: check GTK_FILE_SYSTEM_ERROR
	availability. [#2025651]
	Reported by Cesare Tirabassi. Thanks!!!
