@@ -1,3 +1,8 @@
+2008-10-23  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/test_gtk_unix_print.rb, test/test_gdk_gc.rb: use
+	assert_const_defined and assert_const_not_defined.
+
 2008-10-22  Guillaume Cottenceau
 
 	* test/test_gdk_gc.rb: add a basic Gdk::GC autotest
